# libfprint-rs

./: Cargo.toml
libfprint-sys/: Cargo.toml  build.rs  wrapper.h
