[package]
name = "libfprint-sys"
repository = "https://github.com/alvaroparker/libfprint-rs"
version = "0.1.8"
edition = "2024"
description = "Libfprint raw FFI bindings."
keywords = ["libfprint", "sensor", "hardware", "linux"]
license = "MIT"
links = "libfprint-2"

[package.metadata.pkg-config]
libfprint-2 = "*"

[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"

[package.metadata.docs.rs]
dependencies = ["libfprint-2-dev"]
